--- a/modules/common/certificates/helm/certificates/templates/certificates.yaml
+++ b/modules/common/certificates/helm/certificates/templates/certificates.yaml
@@ -8,13 +8,13 @@ spec:
     config:
     - domains:
       - {{ .Values.cluster_domain }}
-      - *.{{ .Values.cluster_domain }}
+      - "*.{{ .Values.cluster_domain }}"
       dns01:
         provider: route53-liatrio
     commonName: {{ .Values.cluster_domain }}
   dnsNames:
   - {{ .Values.cluster_domain }}
-  - *.{{ .Values.cluster_domain }}
+  - "*.{{ .Values.cluster_domain }}"
   issuerRef:
     kind: Issuer
     name: letsencrypt-dns
