--- a/modules/common/certificates/helm/certificates/templates/certificates.yaml
+++ b/modules/common/certificates/helm/certificates/templates/certificates.yaml
@@ -1,8 +1,7 @@
 apiVersion: certmanager.k8s.io/v1alpha1
 kind: Certificate
 metadata:
-  name: {{ .Values.namespace }}-certificate
-  namespace: istio-system
+  name: {{ .Release.Name }}
 spec:
   acme:
     config:
@@ -18,5 +17,5 @@ spec:
   issuerRef:
     kind: Issuer
     name: letsencrypt-dns
-  secretName: {{ .Values.namespace }}-certificate
+  secretName: {{ .Release.Name }}-certificate
 
