--- a/modules/lead/toolchain/kritis-chart/templates/kritis-config-crd.yaml
+++ b/modules/lead/toolchain/kritis-chart/templates/kritis-config-crd.yaml
@@ -1,6 +1,8 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
+  annotations:
+    "helm.sh/hook": "pre-install"
   name: kritisconfigs.kritis.grafeas.io
 spec:
   group: kritis.grafeas.io
