--- a/modules/lead/toolchain/charts/kritis-chart/values.yaml
+++ b/modules/lead/toolchain/charts/kritis-chart/values.yaml
@@ -49,29 +49,29 @@ repository: gcr.io/kritis-project/
 caBundle: ""
 serviceNamespace: "default"
 
-preinstall:
-  serviceAccount: "kritis-preinstall-serviceaccount"
-  clusterRoleBinding: "kritis-preinstall-clusterrolebinding"
-  createNewCSR: "--create-new-csr=true"
-  pod:
-    name: "kritis-preinstall"
-    image: preinstall
-    command: ["/preinstall"]
-
-postinstall:
-  pod:
-    name: "kritis-postinstall"
-    image: postinstall
-    command: ["/postinstall"]
-
-
-predelete:
-  deleteCSR: "--delete-csr=true"
-  deleteCRDs: "--delete-crd=true"
-  pod:
-    name: "kritis-predelete"
-    image: predelete
-    command: ["/predelete"]
+# preinstall:
+#   serviceAccount: "kritis-preinstall-serviceaccount"
+#   clusterRoleBinding: "kritis-preinstall-clusterrolebinding"
+#   createNewCSR: "--create-new-csr=true"
+#   pod:
+#     name: "kritis-preinstall"
+#     image: preinstall
+#     command: ["/preinstall"]
+# 
+# postinstall:
+#   pod:
+#     name: "kritis-postinstall"
+#     image: postinstall
+#     command: ["/postinstall"]
+# 
+# 
+# predelete:
+#   deleteCSR: "--delete-csr=true"
+#   deleteCRDs: "--delete-crd=true"
+#   pod:
+#     name: "kritis-predelete"
+#     image: predelete
+#     command: ["/predelete"]
 
 # Certificates for Grafeas mutual authentication
 certificates:
