updating config secret

--- a/modules/lead/toolchain/charts/kritis-chart/templates/configmap.yaml
+++ b/modules/lead/toolchain/charts/kritis-chart/templates/configmap.yaml
@@ -7,5 +7,5 @@ data:
     grafeascerts:
       # PKI configuration
       cafile: /certificates/ca.crt
-      keyfile: /certificates/client.key
-      certfile: /certificates/client.crt
+      keyfile: /certificates/tls.key
+      certfile: /certificates/tls.crt
