--- a/modules/common/certificates/helm/certificates/templates/role.yaml
+++ b/modules/common/certificates/helm/certificates/templates/role.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   namespace: {{ .Values.namespace }}
-  name: secret-validator
+  name: {{ .Release.Name }}
 rules:
 - apiGroups: [""] 
   resources: ["secrets"]
