--- a/modules/common/certificates/helm/certificates/templates/serviceaccount.yaml
+++ b/modules/common/certificates/helm/certificates/templates/serviceaccount.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: secret-validator
+  name: {{ .Release.Name }}
   namespace: {{ .Values.namespace }}
   labels:
     app.kubernetes.io/managed-by: helm
