--- a/modules/lead/toolchain/charts/kritis-chart/templates/validating-webhook-config.yaml
+++ b/modules/lead/toolchain/charts/kritis-chart/templates/validating-webhook-config.yaml
@@ -23,5 +23,5 @@ webhooks:
     clientConfig:
       caBundle: {{ .Values.caBundle }}
       service:
-        name: kritis-validaiton-hook
+        name: kritis-validation-hook
         namespace: {{ .Values.serviceNamespace }}
