fixing webook config definitions

--- a/modules/lead/toolchain/charts/kritis-chart/templates/validating-webhook-deploy-config.yaml
+++ b/modules/lead/toolchain/charts/kritis-chart/templates/validating-webhook-deploy-config.yaml
@@ -5,24 +5,20 @@ metadata:
   labels:
     kritis.grafeas.io/install: ""
 webhooks:
-  - name: kritis-validation-hook-deployments.grafeas.io
-    rules:
-      - apiGroups:
-        - "*" # TODO(aaron-prindle) minimize this capture group
-        apiVersions:
-        - "*" # TODO(aaron-prindle) minimize this capture group
-        operations:
-        - CREATE
-          # - UPDATE # TODO(aaron-prindle) add back update when allowlist and helm do not collide
-        resources:
-        - deployments
-        - replicasets
-    failurePolicy: Fail
-    namespaceSelector:
-      matchExpressions:
-      - {key: kritis-validation, operator: NotIn, values: [disabled]}
-    clientConfig:
-      caBundle: {{ .Values.caBundle }}
-      service:
-        name: kritis-validation-hook
-        namespace: {{ .Values.serviceNamespace }}
+- name: kritis-validation-hook-deployments.grafeas.io
+  rules:
+  - apiGroups: ["*"] # TODO(aaron-prindle) minimize this capture group
+    apiVersions: ["*"] # TODO(aaron-prindle) minimize this capture group
+    operations: ["CREATE"]
+    resources: ["deployments", "replicasets"]
+  failurePolicy: Fail
+  namespaceSelector:
+    matchExpressions:
+    - key: kritis-validation 
+      operator: NotIn
+      values: ["disabled"]
+  clientConfig:
+    caBundle: "{{ .Values.caBundle }}"
+    service:
+      name: "kritis-validation-hook"
+      namespace: "{{ .Values.serviceNamespace }}"
