--- a/modules/lead/toolchain/charts/kritis-chart/templates/validating-webhook-config.yaml
+++ b/modules/lead/toolchain/charts/kritis-chart/templates/validating-webhook-config.yaml
@@ -5,23 +5,20 @@ metadata:
   labels:
     kritis.grafeas.io/install: ""
 webhooks:
-  - name: kritis-validation-hook.grafeas.io
-    rules:
-      - apiGroups:
-          - ""
-        apiVersions:
-          - v1
-        operations:
-          - CREATE
-          - UPDATE
-        resources:
-          - pods
-    failurePolicy: Fail
-    namespaceSelector:
-      matchExpressions:
-      - {key: kritis-validation, operator: NotIn, values: [disabled]}
-    clientConfig:
-      caBundle: {{ .Values.caBundle }}
-      service:
-        name: kritis-validation-hook
-        namespace: {{ .Values.serviceNamespace }}
+- name: kritis-validation-hook.grafeas.io
+  rules:
+  - apiGroups: [""]
+    apiVersions: ["v1"]
+    operations: ["CREATE", "UPDATE"]
+    resources: ["pods"]
+  failurePolicy: Fail
+  namespaceSelector:
+    matchExpressions:
+    - key: kritis-validation
+      operator: NotIn 
+      values: ["disabled"]
+  clientConfig:
+    caBundle: "{{ .Values.caBundle }}"
+    service:
+      name: "kritis-validation-hook"
+      namespace: "{{ .Values.serviceNamespace }}"
