--- a/modules/lead/toolchain/charts/kritis-chart/Chart.yaml
+++ b/modules/lead/toolchain/charts/kritis-chart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "0.0.1"
 description: A Helm chart for Kubernetes
-name: kritis-charts
+name: kritis-chart
 version: 0.1.1
