Adding helm-hooks and weights to svc account resources

--- a/modules/common/certificates/helm/certificates/templates/certificates.yaml
+++ b/modules/common/certificates/helm/certificates/templates/certificates.yaml
@@ -31,6 +31,7 @@ metadata:
   name: "{{.Release.Name}}"
   annotations:
     "helm.sh/hook": post-install
+    "helm.sh/hook-weight": "5"
     "helm.sh/hook-delete-policy": hook-succeeded
 spec:
   template:
