--- a/modules/common/certificates/helm/certificates/templates/serviceaccount.yaml
+++ b/modules/common/certificates/helm/certificates/templates/serviceaccount.yaml
@@ -5,4 +5,8 @@ metadata:
   namespace: {{ .Values.namespace }}
   labels:
     app.kubernetes.io/managed-by: helm
+  annotations:
+    "helm.sh/hook": post-install
+    "helm.sh/hook-weight": "0"
+    "helm.sh/hook-delete-policy": hook-succeeded
 automountServiceAccountToken: true
