--- a/modules/common/certificates/helm/certificates/templates/rolebinding.yaml
+++ b/modules/common/certificates/helm/certificates/templates/rolebinding.yaml
@@ -5,6 +5,10 @@ metadata:
   namespace: {{ .Values.namespace }}  
   labels:
     app.kubernetes.io/managed-by: helm
+  annotations:
+    "helm.sh/hook": post-install
+    "helm.sh/hook-weight" "0"
+    "helm.sh/hook-delete-policy": hook-succeeded
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
