--- a/modules/common/certificates/helm/certificates/templates/role.yaml
+++ b/modules/common/certificates/helm/certificates/templates/role.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     "helm.sh/hook": post-install
     "helm.sh/hook-weight" "0"
-    "helm.sh/hook-delete-policy": hook-succeeded
+    "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
 rules:
 - apiGroups: [""] 
   resources: ["secrets"]
