--- a/modules/common/certificates/helm/certificates/templates/rolebinding.yaml
+++ b/modules/common/certificates/helm/certificates/templates/rolebinding.yaml
@@ -8,7 +8,7 @@ metadata:
   annotations:
     "helm.sh/hook": post-install
     "helm.sh/hook-weight" "0"
-    "helm.sh/hook-delete-policy": hook-succeeded
+    "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
