--- a/modules/common/certificates/helm/certificates/templates/role.yaml
+++ b/modules/common/certificates/helm/certificates/templates/role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ .Release.Name }}
   annotations:
     "helm.sh/hook": post-install
-    "helm.sh/hook-weight" "0"
+    "helm.sh/hook-weight": "0"
     "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
 rules:
 - apiGroups: [""] 
