--- a/modules/common/certificates/helm/certificates/templates/rolebinding.yaml
+++ b/modules/common/certificates/helm/certificates/templates/rolebinding.yaml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/managed-by: helm
   annotations:
     "helm.sh/hook": post-install
-    "helm.sh/hook-weight" "0"
+    "helm.sh/hook-weight": "0"
     "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
