--- a/modules/lead/toolchain/charts/kritis-chart/templates/validating-webhook-deploy-config.yaml
+++ b/modules/lead/toolchain/charts/kritis-chart/templates/validating-webhook-deploy-config.yaml
@@ -18,7 +18,7 @@ webhooks:
       operator: NotIn
       values: ["disabled"]
   clientConfig:
-    caBundle: "{{ .Values.caBundle }}"
+    caBundle: "tester"
     service:
       name: "kritis-validation-hook"
       namespace: "{{ .Values.serviceNamespace }}"
