refactoring yaml resources

--- a/modules/lead/toolchain/charts/kritis-chart/templates/validating-webhook-config.yaml
+++ b/modules/lead/toolchain/charts/kritis-chart/templates/validating-webhook-config.yaml
@@ -16,7 +16,8 @@ webhooks:
     matchExpressions:
     - key: kritis-validation
       operator: NotIn 
-      values: ["disabled"]
+      values:
+      - disabled
   clientConfig:
     caBundle: "{{ .Values.caBundle }}"
     service:
