--- a/modules/lead/toolchain/charts/kritis-chart/templates/validating-webhook-deploy-config.yaml
+++ b/modules/lead/toolchain/charts/kritis-chart/templates/validating-webhook-deploy-config.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     kritis.grafeas.io/install: ""
 webhooks:
-- name: kritis-validation-hook-deployments
+- name: kritis-validation-hook-deployments.toolchain.svc
   rules:
   - apiGroups: ["*"]
     apiVersions: ["*"]
