adding downscaler annotation

--- a/modules/lead/toolchain/charts/kritis-chart/templates/kritis-server-deployment.yaml
+++ b/modules/lead/toolchain/charts/kritis-chart/templates/kritis-server-deployment.yaml
@@ -10,6 +10,8 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
     {{ .Values.kritisInstallLabel }}: ""
+  annotations:
+    downscaler/exclude: "true"
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
