--- a/modules/common/certificates/helm/certificates/templates/serviceaccount.yaml
+++ b/modules/common/certificates/helm/certificates/templates/serviceaccount.yaml
@@ -8,5 +8,5 @@ metadata:
   annotations:
     "helm.sh/hook": post-install
     "helm.sh/hook-weight": "0"
-    "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
+    "helm.sh/hook-delete-policy": "before-hook-creation,hook-succeeded,hook-failed"
 automountServiceAccountToken: true
