--- a/modules/common/certificates/helm/certificates/templates/rolebinding.yaml
+++ b/modules/common/certificates/helm/certificates/templates/rolebinding.yaml
@@ -7,8 +7,8 @@ metadata:
     app.kubernetes.io/managed-by: helm
   annotations:
     "helm.sh/hook": post-install
-    "helm.sh/hook-weight": "0"
-    "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
+    "helm.sh/hook-weight": "1"
+    "helm.sh/hook-delete-policy": "before-hook-creation,hook-succeeded,hook-failed"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
