update certificate wait job to watch cert status

--- a/modules/common/certificates/helm/certificates/templates/certificates.yaml
+++ b/modules/common/certificates/helm/certificates/templates/certificates.yaml
@@ -45,8 +45,5 @@ spec:
       - name: post-install-job
         image: bitnami/kubectl:1.15
         command: ["/bin/bash", "-c"]
-        args: ["until kubectl get certificate -n toolchain gndn -o jsonpath="{.status.conditions[0].status}" | grep -q 'True' != 0 ; then exit 0; else exit 1; fi"] 
-        env:
-        - name: SECRETNAME
-          value: {{ .Release.Name }}-certificate
+        args: ["until $(kubectl get certificate {{ .Release.Name }} -n {{ .Values.namespace }} -o jsonpath=\"{.status.conditions[0].status}\") == \"True\"; do echo \"Waiting...\"; sleep 1; done"]
 {{- end  }}
