--- a/modules/common/certificates/helm/certificates/templates/certificates.yaml
+++ b/modules/common/certificates/helm/certificates/templates/certificates.yaml
@@ -45,5 +45,5 @@ spec:
       - name: post-install-job
         image: bitnami/kubectl:1.15
         command: ["/bin/bash", "-c"]
-        args: ["until $(kubectl get certificate {{ .Release.Name }} -n {{ .Values.namespace }} -o jsonpath=\"{.status.conditions[0].status}\") == \"True\"; do echo \"Waiting...\"; sleep 1; done"]
+        args: ["until $(kubectl get certificate {{ .Release.Name }} -n {{ .Values.namespace }} -o jsonpath=\"{.status.conditions[0].status}\" | grep -q \"True\"); do echo \"Waiting...\"; sleep 1; done"]
 {{- end  }}
