use dedicated service account for watching certificates

--- a/modules/common/certificates/helm/certificates/templates/certificates.yaml
+++ b/modules/common/certificates/helm/certificates/templates/certificates.yaml
@@ -40,7 +40,8 @@ spec:
       labels:
         helm.sh/chart: "{{.Chart.Name}}-{{.Chart.Version}}"
     spec:
-      restartPolicy: OnFailure 
+      restartPolicy: OnFailure
+      serviceAccountName: {{ .Values.certWatcherServiceAccount }}
       containers:
       - name: post-install-job
         image: bitnami/kubectl:1.15
