--- a/modules/common/certificates/helm/certificates/templates/certificates.yaml
+++ b/modules/common/certificates/helm/certificates/templates/certificates.yaml
@@ -23,8 +23,55 @@ spec:
     kind: Issuer
     name: {{ .Values.issuer_name }} 
   secretName: {{ .Release.Name }}-certificate
----
 {{- if .Values.waitForCert }}
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: {{ .Release.Name }}
+  namespace: {{ .Values.namespace }}
+  labels:
+    app.kubernetes.io/managed-by: helm
+  annotations:
+    "helm.sh/hook": post-install
+    "helm.sh/hook-weight": "0"
+    "helm.sh/hook-delete-policy": "before-hook-creation,hook-succeeded,hook-failed"
+automountServiceAccountToken: true
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  namespace: {{ .Values.namespace }}
+  name: {{ .Release.Name }}
+  annotations:
+    "helm.sh/hook": post-install
+    "helm.sh/hook-weight": "0"
+    "helm.sh/hook-delete-policy": "before-hook-creation,hook-succeeded,hook-failed"
+rules:
+- apiGroups: ["certmanager.k8s.io"] 
+  resources: ["certificates"]
+  verbs: ["get", "watch", "list"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: {{ .Release.Name }}
+  namespace: {{ .Values.namespace }}  
+  labels:
+    app.kubernetes.io/managed-by: helm
+  annotations:
+    "helm.sh/hook": post-install
+    "helm.sh/hook-weight": "0"
+    "helm.sh/hook-delete-policy": "before-hook-creation,hook-succeeded,hook-failed"
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: {{ .Release.Name }}
+subjects:
+- kind: ServiceAccount
+  name: {{ .Release.Name }}
+  namespace: {{ .Values.namespace }} 
+---
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -40,14 +87,11 @@ spec:
       labels:
         helm.sh/chart: "{{.Chart.Name}}-{{.Chart.Version}}"
     spec:
-      restartPolicy: OnFailure 
+      restartPolicy: OnFailure
       serviceAccountName: {{ .Release.Name }}
       containers:
       - name: post-install-job
         image: bitnami/kubectl:1.15
         command: ["/bin/bash", "-c"]
-        args: ["kubectl get secret $(SECRETNAME)"] 
-        env:
-        - name: SECRETNAME
-          value: {{ .Release.Name }}-certificate
+        args: ["until $(kubectl get certificate {{ .Release.Name }} -n {{ .Values.namespace }} -o jsonpath=\"{.status.conditions[0].status}\" | grep -q \"True\"); do echo \"Waiting...\"; sleep 1; done"]
 {{- end  }}
