--- a/modules/common/certificates/helm/certificates/templates/certificates.yaml
+++ b/modules/common/certificates/helm/certificates/templates/certificates.yaml
@@ -1,4 +1,4 @@
-apiVersion: certmanager.k8s.io/v1alpha1
+apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
   name: {{ .Release.Name }}
@@ -40,7 +40,7 @@ metadata:
     "helm.sh/hook-weight": "0"
     "helm.sh/hook-delete-policy": "before-hook-creation,hook-succeeded,hook-failed"
 rules:
-- apiGroups: ["certmanager.k8s.io"] 
+- apiGroups: ["cert-manager.io"]
   resources: ["certificates"]
   verbs: ["get", "watch", "list"]
 
