--- a/modules/common/certificates/helm/certificates/templates/certificates.yaml
+++ b/modules/common/certificates/helm/certificates/templates/certificates.yaml
@@ -2,6 +2,8 @@ apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
   name: {{ .Release.Name }}
+  annotations:
+    "cert-manager.io/issue-temporary-certificate": "true"
 spec:
   dnsNames:
   - {{ .Values.domain }}
