--- a/modules/common/certificates/helm/certificates/templates/certificates.yaml
+++ b/modules/common/certificates/helm/certificates/templates/certificates.yaml
@@ -1,18 +1,10 @@
-apiVersion: certmanager.k8s.io/v1alpha1
+apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
   name: {{ .Release.Name }}
+  annotations:
+    "cert-manager.io/issue-temporary-certificate": "true"
 spec:
-  {{- if .Values.acme.enabled }}
-  acme:
-    config:
-    - domains:
-      - {{ .Values.domain }}
-      - "*.{{ .Values.domain }}"
-      dns01:
-        provider: liatrio-route53
-    commonName: {{ .Values.domain }}
-  {{- end  }}
   dnsNames:
   - {{ .Values.domain }}
   - "*.{{ .Values.domain }}"
@@ -24,12 +16,13 @@ spec:
     name: {{ .Values.issuer_name }} 
   secretName: {{ .Release.Name }}-certificate
 {{- if .Values.waitForCert }}
+
 ---
+
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .Release.Name }}
-  namespace: {{ .Values.namespace }}
   labels:
     app.kubernetes.io/managed-by: helm
   annotations:
@@ -37,26 +30,28 @@ metadata:
     "helm.sh/hook-weight": "0"
     "helm.sh/hook-delete-policy": "before-hook-creation,hook-succeeded,hook-failed"
 automountServiceAccountToken: true
+
 ---
+
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  namespace: {{ .Values.namespace }}
   name: {{ .Release.Name }}
   annotations:
     "helm.sh/hook": post-install
     "helm.sh/hook-weight": "0"
     "helm.sh/hook-delete-policy": "before-hook-creation,hook-succeeded,hook-failed"
 rules:
-- apiGroups: ["certmanager.k8s.io"] 
+- apiGroups: ["cert-manager.io"]
   resources: ["certificates"]
   verbs: ["get", "watch", "list"]
+
 ---
+
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: {{ .Release.Name }}
-  namespace: {{ .Values.namespace }}  
   labels:
     app.kubernetes.io/managed-by: helm
   annotations:
@@ -70,8 +65,9 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: {{ .Release.Name }}
-  namespace: {{ .Values.namespace }} 
+
 ---
+
 apiVersion: batch/v1
 kind: Job
 metadata:
