--- a/modules/lead/toolchain/charts/harbor-volumes/values.yaml
+++ b/modules/lead/toolchain/charts/harbor-volumes/values.yaml
@@ -1,11 +1,9 @@
 components:
-  - name: registry
-    size: 200Gi
+  registry:
     mountPath: "/storage"
     initCommands:
       - "mkdir -p /storage/docker && chown -R 10000:10000 /storage"
-  - name: chartmuseum
-    size: 100Gi
+  chartmuseum:
     mountPath: "/chart_storage"
     initCommands:
       - "chown -R 10000:10000 /chart_storage"
