--- a/modules/lead/toolchain/charts/harbor-volumes/templates/job.yaml
+++ b/modules/lead/toolchain/charts/harbor-volumes/templates/job.yaml
@@ -1,29 +1,29 @@
-{{- range .Values.components }}
+{{- range $name, $component := .Values.components }}
 ---
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: harbor-{{ .name }}-init
+  name: harbor-{{ $name }}-init
   labels:
     managed-by: Terraform
 spec:
   template:
     metadata:
-      name: harbor-{{ .name }}-init
+      name: harbor-{{ $name }}-init
       labels:
         helm.sh/chart: "{{ $.Chart.Name }}-{{ $.Chart.Version }}"
     spec:
       restartPolicy: OnFailure
       containers:
-        - name: harbor-{{ .name }}-init
+        - name: harbor-{{ $name }}-init
           image: alpine:3.10
           command: ["/bin/sh", "-c"]
-          args: {{ .initCommands }}
+          args: {{ $component.initCommands }}
           volumeMounts:
-            - mountPath: {{ .mountPath }}
-              name: harbor-{{ .name }}
+            - mountPath: {{ $component.mountPath }}
+              name: harbor-{{ $name }}
       volumes:
-        - name: harbor-{{ .name }}
+        - name: harbor-{{ $name }}
           persistentVolumeClaim:
-            claimName: harbor-{{ .name }}
+            claimName: harbor-{{ $name }}
 {{ end }}
