update cert-issuer to use gcp dns

--- a/modules/common/cert-issuer/helm/cert-manager-issuers/templates/issuer.yaml
+++ b/modules/common/cert-issuer/helm/cert-manager-issuers/templates/issuer.yaml
@@ -26,6 +26,13 @@ spec:
             hostedZoneID: {{ .Values.acme.dnsProvider.route53.hostedZoneID }}
             role: {{ .Values.acme.dnsProvider.route53.role }}
 {{- end}}
+{{- if eq .Values.acme.dnsProvider.type "gcp" }}
+          clouddns:
+            project: {{ .Values.acme.dnsProvider.gcp.project }}
+            serviceAccountSecretRef:
+              name: {{ .Values.acme.dnsProvider.gcp.serviceAccountSecretName }}
+              key: {{ .Values.acme.dnsProvider.gcp.serviceAccountSecretKey }}
+{{- end}}
 {{- end}}
 {{- end}}
 {{- if .Values.ca.enabled }}
