--- a/modules/lead/toolchain/charts/harbor-volumes/templates/pvc.yaml
+++ b/modules/lead/toolchain/charts/harbor-volumes/templates/pvc.yaml
@@ -19,6 +19,6 @@ spec:
   resources:
     requests:
       storage: {{ $component.size }}
-  storageClassName: $.Values.storageClassName
+  storageClassName: {{ $.Values.storageClassName }}
   volumeMode: Filesystem
 {{ end }}
