--- a/modules/common/istio/charts/kiali/templates/clusterrolebinding.yaml
+++ b/modules/common/istio/charts/kiali/templates/clusterrolebinding.yaml
@@ -7,7 +7,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: kiali
+  name: kiali-viewer
 subjects:
   - kind: ServiceAccount
     name: kiali-service-account
