add kiali requests and limits

--- a/modules/common/istio/charts/kiali/templates/deployment.yaml
+++ b/modules/common/istio/charts/kiali/templates/deployment.yaml
@@ -39,6 +39,13 @@ spec:
           volumeMounts:
             - name: kiali-configuration
               mountPath: "/kiali-configuration"
+          resources:
+            requests:
+              cpu: 200m
+              memory: 256Mi
+            limits:
+              cpu: 400m
+              memory: 512Mi
       volumes:
         - name: kiali-configuration
           configMap:
