update certificates module to specify issuer kind

--- a/modules/common/certificates/helm/certificates/templates/certificates.yaml
+++ b/modules/common/certificates/helm/certificates/templates/certificates.yaml
@@ -12,8 +12,8 @@ spec:
   - {{ .Values.altname }}
   {{- end  }}
   issuerRef:
-    kind: Issuer
-    name: {{ .Values.issuer_name }} 
+    kind: {{ .Values.issuer.kind }}
+    name: {{ .Values.issuer.name }}
   secretName: {{ .Release.Name }}-certificate
 {{- if .Values.waitForCert }}
 
