--- a/modules/common/istio/charts/kiali/templates/deployment.yaml
+++ b/modules/common/istio/charts/kiali/templates/deployment.yaml
@@ -40,12 +40,11 @@ spec:
             - name: kiali-configuration
               mountPath: "/kiali-configuration"
           resources:
-            requests:
-              cpu: 200m
-              memory: 256Mi
-            limits:
-              cpu: 400m
-              memory: 512Mi
+{{- if .Values.resources }}
+{{ toYaml .Values.resources | indent 12 }}
+{{- else }}
+{{ toYaml .Values.global.defaultResources | indent 12 }}
+{{- end }}
       volumes:
         - name: kiali-configuration
           configMap:
