--- a/modules/common/istio/charts/kiali/templates/ingress.yaml
+++ b/modules/common/istio/charts/kiali/templates/ingress.yaml
@@ -1,25 +1,23 @@
+{{- if .Values.ingressEnabled }}
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   annotations:
-    acme.cert-manager.io/http01-edit-in-place: "true"
-    cert-manager.io/issuer: letsencrypt-dns
-    kubernetes.io/ingress.class: nginx
-    kubernetes.io/tls-acme: "true"
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    kubernetes.io/ingress.class: toolchain-nginx
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
   labels:
     app: kiali
   name: kiali
 spec:
   rules:
-    - host: {{ .Values.istioDomain }}
+    - host: "kiali.{{ .Values.domain }}"
       http:
         paths:
           - backend:
               serviceName: kiali
               servicePort: 20001
-            path: /kiali
+            path: /
   tls:
     - hosts:
-        - {{ .Values.istioDomain }}
-      secretName: istio-ingress-tls
+        - "kiali.{{ .Values.domain }}"
+{{- end }}
