Change jaeder to statefulset

--- a/modules/common/istio/charts/jaeger/templates/statefulset.yaml
+++ b/modules/common/istio/charts/jaeger/templates/statefulset.yaml
@@ -1,7 +1,7 @@
 {{ if eq .Values.provider "jaeger" }}
 
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: istio-tracing
   namespace: {{ .Release.Namespace }}
