--- a/modules/lead/toolchain/charts/harbor-certificates/templates/harbor-certificate.yaml
+++ b/modules/lead/toolchain/charts/harbor-certificates/templates/harbor-certificate.yaml
@@ -11,6 +11,6 @@ spec:
     - {{ .Values.harbor.hostname }}
   issuerRef:
     group: cert-manager.io
-    kind: Issuer
-    name: lead-namespace-issuer
+    kind: {{ .Values.issuer.kind }}
+    name: {{ .Values.issuer.name }}
   secretName: {{ .Values.harbor.secret }}
