Eng 1599 add terraform tests (#248)
* Initial setup of terratest module

This uses an example terraform module from terratest. It needs to
be removed in the future.

* Added documentation for setting up the GOPATH for tests

* Added basic terraform test for namespace module

* Adding test to use k8s to verify service account permissions

* Removing old terratest example

* Updated name of testing namespace

* Latest update.

* create go test module

* add ns param to NewKubectlOptions calls

* add common test functions

* break eks cluster into module

* break cert manager into module

* add aws tests

* sdm operators test

* add terraform test stage

* quote iam role

* run tests in tests folder

* update terratest dependencies

* add AWS ROLE env

* add assume role to test aws provider

* add resources limits to containers

* pass aws region into aws test auth module

* combine agents

* increase assume role timeout

* change terratest timeout to 1 hour

* increase terraform agent CPU limit

* pass assume role arn into tests

* disable color output in terraform validate

* Add terratest template to jenkins kubernetes agents

* Increase eks module version to 7.0.1

* Use terratest builder image in jenkins pipeline

* add terraform.tfstate files to make clean target

* add go test .test-data to make clean target

* use kubeconfig created by eks module

* validate product-local terraform stack in make validate

* refactor aws stack to use refactored modules

* update local tests to use test module

* remove commented out code

* limit full tests to master and PR builds

* add testing to README

Co-authored-by: Joe Knight <joe@devnill.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 .terragrunt-cache/
 .terraform/
 tf.plan
-terraform.tfstate
+terraform.tfstate*
 local/*local*.tfvars
 local*.tfvars
+.test-data
 .DS_Store
 .idea
-tests/
+.vscode
 
 # Ignore all secrets files, keep directory placeholder
 secrets/*
