--- a/modules/common/cert-issuer/helm/cert-manager-issuers/values.yaml
+++ b/modules/common/cert-issuer/helm/cert-manager-issuers/values.yaml
@@ -10,7 +10,8 @@ acme:
     type: route53
     route53:
       region: us-east-1
-      hostedZoneID: foo
+      hostedZoneID:
+      role: 
     gcp:
       project:
       serviceAccountSecretName:
