--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[{*.yml, *.yaml, *.tf}]
+[{*.yml, *.yaml, *.tf, *.tpl}]
 indent_size = 2
 
 [*.go]
